<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="buttonOptions">Optionen</string>
    <string name="buttonStart">Spiel starten</string>
    <string name="buttonBuy">Spiel kaufen</string>
    <string name="select_device">Gerät auswählen</string>
    <string name="none_found">Keine Geräte gefunden</string>
    <string name="bt_not_enabled_leaving">Bluetooth nicht eingeschaltet</string>
    <string name="none_paired">Nicht gepaart</string>
    <string name="save_back_menu">Speichern und zurück</string>
    <string name="send_doc">Daten zum Doktor senden</string>
    <string name="activate_bt">Bluetooth aktivieren</string>
    <string name="connect_bt">Mit Breathy verbinden</string>
    <string name="name">Name</string>
    <string name="mail">E-Mail</string>
    <string name="age">Alter</string>
    <string name="exp">Erfahrungsstufe</string>
    <string name="sound">Sound</string>
    <string name="mail_doc">E-mail des Doktors</string>
    <string name="noob">Neuling</string>
    <string name="pro">Erfahren</string>
    <string name="select_game">Spiel auswählen</string>
    <string name="main_options">Haupteinstellungen</string>
    <string name="main_plan">Plan erstellen</string>
    <string name="create_plan_purpose_of_training">Purpose of the Training</string>
    <string name="create_plan_inhalation">Inhalation</string>
    <string name="create_plan_exhalation">Exhalation</string>
    <string name="create_plan_target_duration">Target duration per exercise</string>
    <string name="minutes">Minutes</string>
    <string name="select_breath_plan">Atemplan auswählen</string>
    <string name="plan_manager_available_plans">Available Breath Plans</string>
    <string name="plan_manager_sample_plan">Sample Plan (1)</string>
    <string name="create_plan_plan_description">Plan Description</string>
    <string name="create_plan_plan_description_hint">Evening Plan (1)</string>
    <string name="create_plan_purpose_of_training">Purpose of the Training</string>
    <string name="create_plan_inhalation">Inhalation</string>
    <string name="create_plan_exhalation">Exhalation</string>
    <string name="create_plan_training_intensity">Training Intensity</string>
    <string name="very_high">Very high</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="very_low">Very low</string>
    <string name="create_plan_target_breathing_rate">Target Breathing Rate</string>
    <string name="create_plan_target_breaths_per_minute">breaths per minute</string>
    <string name="create_plan_target_duration">Target duration per exercise</string>
    <string name="minutes">Minutes</string>
    <string name="title_activity_plan_manager">Plan Manager</string>
    <string name="activate">Activate</string>
    <string name="edit">Edit</string>
    <string name="editing_plan">Editing Plan #</string>
    <string name="creating_plan">Creating Plan #</string>
    <string name="delete">Delete</string>
    <string name="two">2</string>
    <string name="thirty">30</string>
</resources>
