<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.apps.philipps.app.activities.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/mainGames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/select"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/select_game"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/mainOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mainGames"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/settings"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/main_options"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/mainCalibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainOptions"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/settings"
            android:onClick="calibrate"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/select_calibrate"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/mainBreathPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/settings"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/select_breath_plan"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</RelativeLayout>
